feat: #60 - Insertion de données de test avec spring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.output.ansi.enabled=ALWAYS
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
 logging.level.ROOT=INFO
