--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           java-version: ${{ env.JAVA_VERSION }}
       - name: Build with Maven
-        run: mvn package
+        run: mvn -X package
       - name: 'Deploy to Azure WebApp'
         uses: azure/webapps-deploy@v2
         with:
